completed Rule Engine and ML model

--- a/Phase1/Data_analysis.ipynb
+++ b/Phase1/Data_analysis.ipynb
@@ -408,54 +408,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "203ae4b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_featrues(field):\n",
+    "def extract_features(field):\n",
     "    \"\"\"\n",
     "    Convert field dictionary to feature dictionary\n",
     "\n",
     "    Args:\n",
-    "        field  \n",
+    "        field: Dictionary containing field information\n",
     "    \"\"\"\n",
     "    features = {}\n",
     "    # Feature 1: HTML Tag\n",
     "    features['tag'] = field.get('tag', '')\n",
-    "    \n",
+    "\n",
     "    # Feature 2: HTML Type attribute\n",
     "    features['type'] = field.get('type', '')\n",
-    "    \n",
+    "\n",
     "    # Feature 3: Number of Options\n",
     "    options = field.get('options')\n",
     "    features['options_count'] = len(options) if options else 0\n",
     "    features['has_options'] = 1 if options else 0\n",
-    "    \n",
+    "\n",
     "    # Feature 4: Text features - analyze label\n",
     "    label = (field.get('label') or '').lower()\n",
-    "    placeholder = (field.get('placeholder') or '').lower()\n",
-    "    context = (field.get('context') or '').lower()\n",
-    "    \n",
-    "    full_text = f\"{label} {placeholder} {context}\"\n",
-    "    \n",
-    "    #select\n",
+    "\n",
+    "    # Select keywords\n",
     "    select_keywords = ['select', 'choose', 'pick', 'option', 'dropdown']\n",
-    "    keyword_count = sum(1 for kw in select_keywords if kw in full_text)\n",
+    "    keyword_count = sum(1 for kw in select_keywords if kw in label)\n",
     "    features['keyword_select'] = keyword_count\n",
-    "    \n",
-    "    # yes or no\n",
-    "    features['label_has_yes_or_no'] = 1 if ('yes' in label or 'no' in label) else 0\n",
-    "    \n",
+    "\n",
+    "    # Yes/no question patterns - detect questions that expect yes/no answers\n",
+    "    yes_no_patterns = [\n",
+    "        'are you', 'do you', 'have you', 'did you', 'will you',\n",
+    "        'can you', 'would you', 'could you', 'should you'\n",
+    "    ]\n",
+    "    features['is_yes_no_question'] = 1 if any(pattern in label for pattern in yes_no_patterns) else 0\n",
+    "\n",
+    "    # Consent/agreement patterns\n",
+    "    consent_keywords = ['accept', 'agree', 'consent', 'certify', 'authorize', 'acknowledge', 'statement', 'policy']\n",
+    "    features['is_consent'] = 1 if any(kw in label for kw in consent_keywords) else 0\n",
+    "\n",
+    "    # Demographics patterns\n",
+    "    demographic_keywords = ['gender', 'ethnicity', 'race', 'veteran', 'disability', 'origin']\n",
+    "    features['is_demographic'] = 1 if any(kw in label for kw in demographic_keywords) else 0\n",
+    "\n",
     "    features['is_required'] = 1 if field.get('required') else 0\n",
     "    features['label_length'] = len(label)\n",
-    "    \n",
+    "\n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "1cce7fab",
    "metadata": {},
    "outputs": [
@@ -468,53 +476,61 @@
       "ID: first_name\n",
       "Raw input_kind: text\n",
       "Features:\n",
-      "  tag                 : input\n",
-      "  type                : text\n",
-      "  options_count       : 0\n",
-      "  has_options         : 0\n",
-      "  keyword_select      : 0\n",
-      "  label_has_yes_or_no : 0\n",
-      "  is_required         : 1\n",
-      "  label_length        : 10\n",
+      "  tag                      : input\n",
+      "  type                     : text\n",
+      "  options_count            : 0\n",
+      "  has_options              : 0\n",
+      "  keyword_select           : 0\n",
+      "  is_yes_no_question       : 0\n",
+      "  is_consent               : 0\n",
+      "  is_demographic           : 0\n",
+      "  is_required              : 1\n",
+      "  label_length             : 10\n",
       "\n",
       "Field: Country*\n",
       "ID: country\n",
       "Raw input_kind: select\n",
       "Features:\n",
-      "  tag                 : input\n",
-      "  type                : text\n",
-      "  options_count       : 2\n",
-      "  has_options         : 1\n",
-      "  keyword_select      : 0\n",
-      "  label_has_yes_or_no : 0\n",
-      "  is_required         : 1\n",
-      "  label_length        : 8\n",
+      "  tag                      : input\n",
+      "  type                     : text\n",
+      "  options_count            : 2\n",
+      "  has_options              : 1\n",
+      "  keyword_select           : 0\n",
+      "  is_yes_no_question       : 0\n",
+      "  is_consent               : 0\n",
+      "  is_demographic           : 0\n",
+      "  is_required              : 1\n",
+      "  label_length             : 8\n",
       "\n",
       "Field: Phone\n",
       "ID: phone\n",
       "Raw input_kind: text\n",
       "Features:\n",
-      "  tag                 : input\n",
-      "  type                : tel\n",
-      "  options_count       : 0\n",
-      "  has_options         : 0\n",
-      "  keyword_select      : 0\n",
-      "  label_has_yes_or_no : 0\n",
-      "  is_required         : 1\n",
-      "  label_length        : 5\n",
+      "  tag                      : input\n",
+      "  type                     : tel\n",
+      "  options_count            : 0\n",
+      "  has_options              : 0\n",
+      "  keyword_select           : 0\n",
+      "  is_yes_no_question       : 0\n",
+      "  is_consent               : 0\n",
+      "  is_demographic           : 0\n",
+      "  is_required              : 1\n",
+      "  label_length             : 5\n",
       "\n",
       "Field: Have you ever applied for employment wit\n",
       "ID: question_7968648005\n",
       "Raw input_kind: text\n",
       "Features:\n",
-      "  tag                 : input\n",
-      "  type                : text\n",
-      "  options_count       : 0\n",
-      "  has_options         : 0\n",
-      "  keyword_select      : 0\n",
-      "  label_has_yes_or_no : 0\n",
-      "  is_required         : 1\n",
-      "  label_length        : 45\n"
+      "  tag                      : input\n",
+      "  type                     : text\n",
+      "  options_count            : 0\n",
+      "  has_options              : 0\n",
+      "  keyword_select           : 0\n",
+      "  is_yes_no_question       : 1\n",
+      "  is_consent               : 0\n",
+      "  is_demographic           : 0\n",
+      "  is_required              : 1\n",
+      "  label_length             : 45\n"
      ]
     }
    ],
@@ -529,13 +545,13 @@
     "            break\n",
     "        \n",
     "    if field:\n",
-    "        features = extract_featrues(field)\n",
+    "        features = extract_features(field)\n",
     "        print(f\"\\nField: {field.get('label')[:40]}\")\n",
     "        print(f\"ID: {field_id}\")\n",
     "        print(f\"Raw input_kind: {field.get('input_kind')}\")\n",
     "        print(\"Features:\")\n",
     "        for key, value in features.items():\n",
-    "            print(f\"  {key:20s}: {value}\")"
+    "            print(f\"  {key:25s}: {value}\")"
    ]
   },
   {
@@ -548,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "bf1d4c8a",
    "metadata": {},
    "outputs": [],
@@ -558,7 +574,7 @@
     "for field in raw_data:\n",
     "    field_id = field.get('id')\n",
     "    if field_id in correct_types:\n",
-    "        features = extract_featrues(field)\n",
+    "        features = extract_features(field)\n",
     "        features['field_id'] = field_id\n",
     "        features['predicted_kind'] =  field.get('input_kind')\n",
     "        features['true_kind'] = correct_types[field_id]\n",
@@ -568,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "a5f570b6",
    "metadata": {},
    "outputs": [],
@@ -578,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "3aea46d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(23, 12)"
+       "(23, 14)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "09ab96ee",
    "metadata": {},
    "outputs": [
@@ -609,7 +625,7 @@
        "23"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,17 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "1614a039",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "14"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "525e2fa1",
    "metadata": {},
    "outputs": [
@@ -680,7 +696,17 @@
          "type": "integer"
         },
         {
-         "name": "label_has_yes_or_no",
+         "name": "is_yes_no_question",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "is_consent",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "is_demographic",
          "rawType": "int64",
          "type": "integer"
         },
@@ -715,12 +741,14 @@
          "type": "integer"
         }
        ],
-       "ref": "594a0bfd-46f4-4d77-8cfb-7b6dac510ee6",
+       "ref": "d9f38181-67a2-4d4c-9b1d-0cd88c57678c",
        "rows": [
         [
          "0",
          "input",
          "text",
+         "0",
+         "0",
          "0",
          "0",
          "0",
@@ -740,6 +768,8 @@
          "0",
          "0",
          "0",
+         "0",
+         "0",
          "1",
          "9",
          "last_name",
@@ -751,6 +781,8 @@
          "2",
          "input",
          "text",
+         "0",
+         "0",
          "0",
          "0",
          "0",
@@ -770,6 +802,8 @@
          "1",
          "0",
          "0",
+         "0",
+         "0",
          "1",
          "8",
          "country",
@@ -785,6 +819,8 @@
          "0",
          "0",
          "0",
+         "0",
+         "0",
          "1",
          "5",
          "phone",
@@ -794,7 +830,7 @@
         ]
        ],
        "shape": {
-        "columns": 12,
+        "columns": 14,
         "rows": 5
        }
       },
@@ -822,7 +858,9 @@
        "      <th>options_count</th>\n",
        "      <th>has_options</th>\n",
        "      <th>keyword_select</th>\n",
-       "      <th>label_has_yes_or_no</th>\n",
+       "      <th>is_yes_no_question</th>\n",
+       "      <th>is_consent</th>\n",
+       "      <th>is_demographic</th>\n",
        "      <th>is_required</th>\n",
        "      <th>label_length</th>\n",
        "      <th>field_id</th>\n",
@@ -836,6 +874,8 @@
        "      <th>0</th>\n",
        "      <td>input</td>\n",
        "      <td>text</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -855,6 +895,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>last_name</td>\n",
@@ -866,6 +908,8 @@
        "      <th>2</th>\n",
        "      <td>input</td>\n",
        "      <td>text</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -885,6 +929,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>country</td>\n",
@@ -896,6 +942,8 @@
        "      <th>4</th>\n",
        "      <td>input</td>\n",
        "      <td>tel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -919,22 +967,22 @@
        "3  input  text              2            1               0   \n",
        "4  input   tel              0            0               0   \n",
        "\n",
-       "   label_has_yes_or_no  is_required  label_length    field_id predicted_kind  \\\n",
-       "0                    0            1            10  first_name           text   \n",
-       "1                    0            1             9   last_name           text   \n",
-       "2                    0            1             5       email           text   \n",
-       "3                    0            1             8     country         select   \n",
-       "4                    0            1             5       phone           text   \n",
+       "   is_yes_no_question  is_consent  is_demographic  is_required  label_length  \\\n",
+       "0                   0           0               0            1            10   \n",
+       "1                   0           0               0            1             9   \n",
+       "2                   0           0               0            1             5   \n",
+       "3                   0           0               0            1             8   \n",
+       "4                   0           0               0            1             5   \n",
        "\n",
-       "  true_kind  is_correct  \n",
-       "0      text           1  \n",
-       "1      text           1  \n",
-       "2      text           1  \n",
-       "3    select           1  \n",
-       "4      text           1  "
+       "     field_id predicted_kind true_kind  is_correct  \n",
+       "0  first_name           text      text           1  \n",
+       "1   last_name           text      text           1  \n",
+       "2       email           text      text           1  \n",
+       "3     country         select    select           1  \n",
+       "4       phone           text      text           1  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "d1d57ae4",
    "metadata": {},
    "outputs": [
@@ -955,7 +1003,7 @@
        "73.91304347826086"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "f92c7958",
    "metadata": {},
    "outputs": [
@@ -988,7 +1036,7 @@
          "type": "integer"
         }
        ],
-       "ref": "abd1338e-4667-4026-a4c4-d81fbf7b7497",
+       "ref": "58119967-310b-4036-8faf-3a40f232f2e9",
        "rows": [
         [
          "text",
@@ -1011,7 +1059,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "19851adc",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1089,7 @@
          "type": "integer"
         }
        ],
-       "ref": "f8e7c480-c45d-4337-adbe-406ab9e75254",
+       "ref": "4a6b7abf-6b26-4e3c-b2b6-6ed93939248d",
        "rows": [
         [
          "select",
@@ -1064,7 +1112,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "6b2210ae",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "9466c521",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "5b40419f",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "6d508cea",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "fec94ce5",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "d4f2e3c3",
    "metadata": {},
    "outputs": [],
@@ -1168,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "dd81b148",
    "metadata": {},
    "outputs": [
@@ -1191,17 +1239,27 @@
       "  Misclassified avg:    0.000\n",
       "  Difference:           0.706 ← IMPORTANCE\n",
       "\n",
+      "is_yes_no_question       \n",
+      "  Correct avg:         0.118\n",
+      "  Misclassified avg:    0.500\n",
+      "  Difference:           0.382 ← IMPORTANCE\n",
+      "\n",
       "has_options              \n",
       "  Correct avg:         0.353\n",
       "  Misclassified avg:    0.000\n",
       "  Difference:           0.353 ← IMPORTANCE\n",
       "\n",
-      "keyword_select           \n",
+      "is_consent               \n",
       "  Correct avg:         0.000\n",
-      "  Misclassified avg:    0.000\n",
-      "  Difference:           0.000 ← IMPORTANCE\n",
+      "  Misclassified avg:    0.333\n",
+      "  Difference:           0.333 ← IMPORTANCE\n",
       "\n",
-      "label_has_yes_or_no      \n",
+      "is_demographic           \n",
+      "  Correct avg:         0.059\n",
+      "  Misclassified avg:    0.167\n",
+      "  Difference:           0.108 ← IMPORTANCE\n",
+      "\n",
+      "keyword_select           \n",
       "  Correct avg:         0.000\n",
       "  Misclassified avg:    0.000\n",
       "  Difference:           0.000 ← IMPORTANCE\n",
@@ -1257,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "ad3da94a",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1348,7 @@
        "  'standard_input_kind': 'select'}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "995ff729",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1374,7 @@
        " '4014112005']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "6c075010",
    "metadata": {},
    "outputs": [],
@@ -1343,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "92e9f09d",
    "metadata": {},
    "outputs": [
