--- a/Phase1/Data_analysis.ipynb
+++ b/Phase1/Data_analysis.ipynb
@@ -1,8 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "82341877",
+   "metadata": {},
+   "source": [
+    "## LibaSpace AI engineer Intern Challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ddaab7d",
+   "metadata": {},
+   "source": [
+    "This is Task B - Accurate Form Type Classification<br>\n",
+    "<br>\n",
+    "Problem Statement:<br>\n",
+    " In our job-form auto-filling system, a single wrong field type can break an entire submission. We need an extremely reliable module to infer each field’s real input type (e.g., text, select, radio, checkbox, date, file, etc.) from Playwright-extracted DOM data.<br>\n",
+    " <br>\n",
+    "Goal: Design a robust, explainable classifier that achieves near-perfect accuracy across diverse ATS forms (Greenhouse, Lever, Workday).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "147910a3",
+   "metadata": {},
+   "source": [
+    "NOTE: this is done on the example raw_form and standard_form data given the document"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "d3121b8a",
    "metadata": {},
    "outputs": [],
